# HomeChat

./: .gitignore  CMakeLists.txt
QML/: qml.qrc
QML/JS/: net_helper.js
QML/controls/: CustomButton.qml  CustomField.qml  IconButton.qml  MessageBar.qml  MessageBox.qml
QML/models/: MessageModel.qml
QML/singletones/: Colors.qml  Fonts.qml  Icons.qml  Sizes.qml  Strings.qml
QML/views/: ChatView.qml  LoginView.qml  MainWindow.qml  MessageView.qml  RegisterView.qml  main.qml
Sources/Client/: CMakeLists.txt  main.cpp
Sources/Client/Common/: QMLTypes.h
Sources/Client/Net/: DatagramListener.cpp  DatagramListener.h  DatagramListner.cpp  DatagramListner.h  ServerAddressProvider.cpp  ServerAddressProvider.h
Sources/Server/: CMakeLists.txt  ChatServer.js  IPBroadcaster.js  Settings.js
